--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-}
- 
+
+
 html,
 body{
 	height: 100%;
@@ -22,6 +22,7 @@ body{
 
 }
 .time {
+	flex-basis: 50%;
 	font-size: 1050%;
 	font-weight: 500;
 	text-shadow: 3px 5px 5px #000;
@@ -31,8 +32,10 @@ body{
 	color:white;
 	height: 100%;
 	text-align: center;
-	transform: translate(0%,18%);
-
+	/*transform: translate(0%,18%);*/
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 
 }
 .username {
@@ -49,11 +52,26 @@ body{
 	outline:none;
 }
 
-/*.background {
+input {
+	color: transparent;
+	text-shadow: 0 0 0 #fff;
+	text-align: center;
+	font-size: 24px;
+	font-weight: 500;
+}
+
+.date {
 	position: absolute;
 	top:0;
-	left:0;
-	transform: translate(-50%, -50%);
-	overflow: hidden;
-}*/
+	right: 0;
+	padding: 10px;
+}
+
+.location {
+	position: absolute;
+	top:0;
+	left: 0;
+	padding: 10px;
+
+}
 
