--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
 	background-image: url(back2.jpg);
+	/*opacity: 0.7;*/
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -28,7 +29,7 @@ body{
 	flex-basis: 50%;
 	font-size: 1050%;
 	font-weight: 500;
-	text-shadow: 3px 5px 5px #000;
+	text-shadow: 0px 0px 18px #000;
 }
 
 .wrapper {
@@ -69,8 +70,8 @@ input {
 	right: 0;
 	padding: 10px;
 	font-weight: 500;
-    font-size: 12px;
-    text-shadow: 1px 1px 1px black;
+    font-size: 16px;
+    text-shadow: 0px 0px 18px black;
 }
 
 .location {
@@ -79,8 +80,11 @@ input {
 	left: 0;
 	padding: 10px;
 	font-weight: 500;
-    font-size: 12px;
+    font-size: 16px;
     text-shadow: 1px 1px 1px black;
+   	display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 
 }
 
@@ -88,4 +92,48 @@ input {
 
 	font-size:40px;
 	text-shadow: 1px 1px 1px black;
+}
+
+/*CSS Loading Animation*/
+
+.spinner {
+  width: 40px;
+  height: 40px;
+
+  position: relative;
+  margin: 100px auto;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #333;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+  animation: sk-bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes sk-bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bounce {
+  0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
 }
